page Crud Zuhair Layout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,7 @@
         android:padding="8dp">
 
         <Button
+            android:id="@+id/btnZuhair"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Zuhair"
