--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,6 +48,7 @@
             android:textAllCaps="false"/>
 
         <Button
+            android:id="@+id/btnYoga"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Yoga"
